WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240459
[WebAuthn] Set displayName in AuthenticatorAssertionResponse for platform authenticator
https://bugs.webkit.org/show_bug.cgi?id=240459
Summary
[WebAuthn] Set displayName in AuthenticatorAssertionResponse for platform aut...
pascoe@apple.com
Reported
2022-05-16 09:28:45 PDT
This prevents the display name from being passed to the UI.
Attachments
Patch
(5.36 KB, patch)
2022-05-16 11:36 PDT
,
pascoe@apple.com
no flags
Details
Formatted Diff
Diff
Patch
(5.37 KB, patch)
2022-05-16 11:50 PDT
,
pascoe@apple.com
bfulgham
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-16 09:28:54 PDT
<
rdar://problem/93350479
>
pascoe@apple.com
Comment 2
2022-05-16 11:36:14 PDT
Created
attachment 459440
[details]
Patch
pascoe@apple.com
Comment 3
2022-05-16 11:50:59 PDT
Created
attachment 459442
[details]
Patch
Brent Fulgham
Comment 4
2022-05-17 09:58:23 PDT
Comment on
attachment 459442
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=459442&action=review
r=me
> Source/WebKit/ChangeLog:3 > + [WebAuthn] Set displayName in AuthenticatorAssertionResponse for platform authenticator
Question: I'm not sure how setting the displayName here "prevents the display name from being passed to the UI". Did the bug mean to say "prevents the user name from being passed to the UI?"
Brent Fulgham
Comment 5
2022-05-17 09:59:38 PDT
The windows test failure does not seem to be related to this Cocoa and WebAuth-specific change.
pascoe@apple.com
Comment 6
2022-05-17 10:03:12 PDT
(In reply to Brent Fulgham from
comment #4
)
> > > Source/WebKit/ChangeLog:3 > > + [WebAuthn] Set displayName in AuthenticatorAssertionResponse for platform authenticator > > Question: I'm not sure how setting the displayName here "prevents the > display name from being passed to the UI". Did the bug mean to say "prevents > the user name from being passed to the UI?"
Thank you for the review. I meant to say: Not setting the displayName in AuthenticatorAssertionResponse for platform credentials is a bug. This bug prevents the UI code from seeing the displayName for a credential, if available. The patch fixes this.
pascoe@apple.com
Comment 7
2022-05-17 11:42:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/682
EWS
Comment 8
2022-05-17 12:03:15 PDT
Committed
r294331
(
250651@main
): <
https://commits.webkit.org/250651@main
> Reviewed commits have been landed. Closing PR #682 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug