[WebAuthn] Set displayName in AuthenticatorAssertionResponse for platform authenticator https://bugs.webkit.org/show_bug.cgi?id=240459 <rdar://93350479>

Reviewed by Brent Fulgham.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/_WKWebAuthenticationPanel.mm:
(-[TestWebAuthenticationPanelDelegate panel:selectAssertionResponse:source:completionHandler:]):
(TestWebKitAPI::TEST):
Updated API test to account for displayName.
* Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticatorInternal::getExistingCredentials):

Canonical link: https://commits.webkit.org/250651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294331 268f45cc-cd09-0410-ab3c-d52691b4dbfc